--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Content {
+  width: 80%;
 }
