--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overscroll-behavior: none;
 }
 
 .Content {
@@ -16,8 +17,10 @@
 .App-footer {
   position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   font-size: calc(2vmin);
-  margin: 1rem;
+  margin: 1.5rem;
 }
 
 .PokemonName {
