--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow-y: hidden;
   overscroll-behavior: none;
 }
 
@@ -27,9 +28,9 @@
   justify-content: center;
   align-items: center;
   img {
-    height: 1.4rem;
+    height: 1.8rem;
     padding-right: 0.4rem;
-    transform: rotate(-8deg);
+    transform: rotate(-16deg);
   }
 }
 
