Use rem for header img

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 }
 
 .Header-img {
-  width: 22px;
+  width: 1.8rem;
   height: auto;
   padding-right: 0.4rem;
   transform: rotate(-16deg);
