Fix styling for search box and fix font size in footer

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  padding-top: 0.6rem;
 }
 
 .InputField {
@@ -144,8 +145,12 @@ body {
 
 .Footer {
   margin-top: auto;
-  font-size: calc(2vmin);
+  font-size: calc(1.2vmin);
+  width: 80%;
   margin: 1.5rem;
+  @media (max-width: 480px) {
+    font-size: calc(1.8vmin);
+  }
 }
 
 @media screen and (min-width: 1600px) {
