--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,13 @@ body {
   margin-bottom: 2rem;
 }
 
+.PokemonId {
+  font-size: calc(5px + 2vmin);
+  margin-bottom: 1rem;
+  font-style: italic;
+  font-family: monospace;
+}
+
 .PrevAndNextPokemon {
   font-size: calc(5px + 2vmin);
   position: relative;
